<resources>
    <string name="hostdialog_label_selecthost">Select Host</string>
    <string name="logindialog_button_login">Log In</string>
    <string name="homescreen_button_review">Review</string>
    <string name="homescreen_button_routes">Routes</string>
    <string name="homescreen_button_friends">Friends</string>
    <string name="homescreen_button_profile">Profile (disabled)</string>
    <string name="homescreen_button_goals">Goals (disabled)</string>
    <string name="homescreen_button_workout">Workout</string>
    <string name="homescreen_label_testharness">TEST HARNESS MODE</string>
    <string name="homescreen_dialog_cantconnect">Can\'t Connect</string>
    <string name="homescreen_dialog_cantconnect_message">Unfortunately we can\'t connect to the server right now. Please try again later.</string>
    <string name="homescreen_dialog_invalidlogin">Invalid Login Details</string>
    <string name="homescreen_dialog_invalidlogin_message">It seems you entered an incorrect username or password. Please try again.</string>
    <string name="homescreen_dialog_goprofile">Your Profile</string>
    <string name="homescreen_dialog_goprofile_message">Please enter your details in your profile.</string>
    <string name="homescreen_dialog_nobluetooth">Bluetooth not supported</string>
    <string name="homescreen_dialog_nobluetooth_message">Bluetooth support is required for this app to function, but is not supported on this device.</string>
    <string name="summaryscreen_label_thismonth">This Month</string>
    <string name="summaryscreen_label_today">Today</string>
    <string name="summaryscreen_label_symptoms">Symptoms</string>
    <string name="summaryscreen_label_notifications">Notifications</string>
    <string name="summaryscreen_label_map">Map</string>
    <string name="summaryscreen_button_addtofavorites">Save to Favorites</string>
    <string name="summaryscreen_button_removefromfavorites">Remove from Favorites</string>
    <string name="summaryscreen_dialog_nodata">No data!</string>
    <string name="summaryscreen_dialog_nodata_message">There doesn\'t appear to be any workout data available for review.</string>
    <string name="cpanel_button_more">More</string>
    <string name="cpanel_button_less">Less</string>
    <string name="datepicker_selectdate">Select Date</string>
    <string name="datepicker_yearlabel">Year:</string>
    <string name="datepicker_monthlabel">Month:</string>
    <string name="settingsscreen_label_userprofile">User Profile</string>
    <string name="settingsscreen_label_personaldetails">Personal Details</string>
    <string name="settingsscreen_label_bloodlactatewarning">(Leave blank if you have not completed a blood lactate exercise test)</string>
    <string name="settingsscreen_label_bloodlactateconcentration">Blood Lactate Concentration</string>
    <string name="settingsscreen_label_logfiles">Log Files</string>
    <string name="settingsscreen_button_emaillogs">Email</string>
    <string name="settingsscreen_button_clearlogs">Clear</string>
    <string name="settingsscreen_label_logindetails">Login Details</string>
    <string name="settingsscreen_button_switchuser">Switch User</string>
    <string name="settingsscreen_label_odinsettings">Odin Settings</string>
    <string name="settingsscreen_dialog_cantsave">There was a problem saving your profile to Odin. We\'ll try again later.</string>
    <string name="settingsscreen_dialog_emaillogs">Email Logs</string>
    <string name="settingsscreen_dialog_emaillogs_message">Are you sure you want to email the logs to the developer? Please only do this if directed as it may incur unnecessary bandwidth costs.</string>
    <string name="settingsscreen_toast_nologfiles">Found no log files to send!</string>
    <string name="settingsscreen_chooser_emaillogs">Email Logs…</string>
    <string name="settingsscreen_dialog_clearlogs">Clear Logs</string>
    <string name="settingsscreen_dialog_clearlogs_message">Are you sure you want to clear the logs? This operation cannot be undone and should only be performed when directed by your clinician or a program administrator.</string>
    <string name="settingsscreen_toast_logscleared">Log files cleared!</string>
    <string name="settingsscreen_dialog_switchuser">Switch User</string>
    <string name="settingsscreen_dialog_switchuser_message">Are you sure you want to switch users? This should only be performed if directed by your clinician or program administrator.</string>
    <string name="goaldialog_label_selectgoal">Select Goal</string>
    <string name="goaldialog_label_freeworkout">Free Workout</string>
    <string name="goaldialog_label_durationgoal">Duration Goal</string>
    <string name="goaldialog_label_distancegoal">Distance Goal</string>
    <string name="goaldialog_label_loadgoal">Training Load Goal</string>
    <string name="goaldialog_label_routegoal">Follow a Route</string>
    <string name="goaldialog_label_load">Load: </string>
    <string name="unit_hours">hh</string>
    <string name="unit_minutes">mm</string>
    <string name="unit_kilometers">kms</string>
    <string name="workoutscreen_button_showmap">Show Map</string>
    <string name="workoutscreen_button_hidemap">Hide Map</string>
    <string name="workoutscreen_button_symptoms">Symptoms</string>
    <string name="workoutscreen_button_notifications">Notifications</string>
    <string name="workoutscreen_button_start">Start!</string>
    <string name="workoutscreen_dialog_stopworkout">Stop workout?</string>
    <string name="workoutscreen_dialog_stopworkout_message">Are you sure you wish to stop your workout?</string>
    <string name="workoutscreen_dialog_stopworkout_nokeepgoing">No, keep going!</string>
    <string name="workoutscreen_dialog_nobioharness">Could not connect to Bioharness</string>
    <string name="workoutscreen_dialog_nobioharness_message">Could not connect to the Bioharness. Would you like to retry?</string>
    <string name="workoutscreen_dialog_nobioharness_retry">Retry</string>
    <string name="notificationdialog_label_receivedat">Received at: </string>
    <string name="notificationdialog_label_notifications">Notifications</string>
    <string name="btdevices_label_paireddevices">PAIRED DEVICES</string>
    <string name="btdevices_label_newdevices">OTHER AVAILABLE DEVICES</string>
    <string name="btdevices_button_scan">Scan for devices</string>
    <string name="btdevices_none_paired">No devices have been paired</string>
    <string name="btdevices_none_found">No devices found</string>
    <string name="btdevices_scanning">Scanning for devices…</string>
    <string name="btdevices_select_device">Select the Bioharness from the list.</string>
    <string name="bioharness_disconnected">Disconnected from Bioharness</string>
    <string name="bioharness_disconnected_short">Disconnected</string>
    <string name="bioharness_connecting">Connecting to Bioharness</string>
    <string name="bioharness_connecting_short">Connecting…</string>
    <string name="bioharness_connected">Connected to Bioharness</string>
    <string name="bioharness_connected_short">Connected</string>
    <string name="bioharness_disconnect">Disconnect from Bioharness</string>
    <string name="bioharness_connect">Connect to Bioharness</string>
    <string name="bioharness_notification_status">Bioharness Status</string>
    <string name="symptompicker_label_selectsymptom">Select Symptom</string>
    <string name="symptompicker_button_add">Add</string>
    <string name="symptompicker_label_severity">Severity:</string>
    <string name="symptompicker_label_newsymptom">New Symptom:</string>
    <string name="symptompicker_label_priorsymptoms">Prior Symptoms:</string>
    <string name="tilepicker_label_selectinfo">Select Information</string>
    <string name="connectivitydlg_label_connecting">Connecting…</string>
    <string name="goalscreen_label_goaltype">Goal Type</string>
    <string name="goalscreen_label_weeklytarget">Weekly Target</string>
    <string name="goalscreen_button_addgoal">Add Goal</string>
    <string name="goalscreen_dialog_removegoal">Remove Goal?</string>
    <string name="goalscreen_dialog_areyousure">Are you sure you want to remove this goal?</string>
    <string name="goalscreen_dialog_synch">Synchronizing</string>
    <string name="goalscreen_dialog_synchwithodin">Synchronizing with Odin</string>
    <string name="goalscreen_dialog_problemsynching">There was a problem saving your goals to Odin. We\'ll try again later.</string>
    <string name="goalscreen_dialog_newgoal">New Goal</string>
    <string name="routescreen_label_length">Length:</string>
    <string name="routescreen_label_distancetoroute">Distance to route:</string>
    <string name="routescreen_label_createdby">Created by:</string>
    <string name="routescreen_button_startworkout">Start Workout</string>
    <string name="routescreen_button_selectroute">Select Route</string>
    <string name="routescreen_button_synchronize">Synchronize with Odin</string>
    <string name="routescreen_tab_all">All</string>
    <string name="routescreen_tab_favorites">Favorites</string>
    <string name="routescreen_tab_nearby">Nearby</string>
    <string name="routescreen_tab_sortbylength">Sort By Length</string>
    <string name="locationservice_toast_connected">Connected to location services</string>
    <string name="locationservice_toast_disconnected">Disconnected from location services</string>
    <string name="locationservice_toast_failed">Failed to connect to locaiton services</string>
    <string name="workoutservice_notification_goalreached">You reached your goal! Congratulations!</string>
    <string name="workoutservice_notification_goalreached_title">Goal Reached!</string>
    <string name="workoutservice_notification_reachedgoalin">Congratulations! You achieved your goal in: </string>
    <string name="workoutservice_utterance_reachedgoal">Congratulations! You achieved your goal in </string>
    <string name="workoutservice_utterance_hours"> hours, </string>
    <string name="workoutservice_utterance_minutes"> minutes, and </string>
    <string name="workoutservice_utterance_seconds"> seconds.</string>
    <string name="workoutservice_notification_receivedmessage">Received Message:</string>
    <string name="workoutservice_notification_receivedmessage_title">Received Message</string>
    <string name="odinactivity_button_connect">Connect</string>
    <string name="odinactivity_button_disconnect">Disconnect</string>
    <string name="odinactivity_button_exit">Exit</string>
    <string name="pref_name_label">Name</string>
    <string name="pref_email_label">Email</string>
    <string name="pref_dob_label">Date of Birth</string>
    <string name="pref_height_label">Height (cm)</string>
    <string name="pref_weight_label">Weight (kg)</string>
    <string name="pref_max_hr_label">Maximum heart rate (bpm)</string>
    <string name="pref_rest_hr_label">Resting heart rate (bpm)</string>
    <string name="pref_gender_label">Gender</string>
    <string name="pref_blood_lactate_label">Training Load Parameters</string>
    <string name="pref_password_label">Password</string>
    <string name="pref_username_label">Username</string>
    <string name="stats_unit_hrr">%HRR</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="not_set">[Not Set]</string>
    <string name="placeholder_novalue">(none)</string>
    <string name="rg_name_hint">Enter a route name</string>
    <string name="rg_distance_hint">Enter a route distance</string>
    <string name="rg_elevation_hint">Enter a route elevation gain</string>
    <string name="rg_name_label">Route name</string>
    <string name="rg_distance_label">Route distance (meters)</string>
    <string name="rg_elevation_label">Total route elevation (meters)</string>
    <string name="rg_button_label">Generate</string>
</resources>