<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/RootLayoutStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <nz.ac.auckland.nihi.trainer.views.FontableButton
            android:id="@+id/btnAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routescreen_tab_all" />

        <nz.ac.auckland.nihi.trainer.views.FontableButton
            android:id="@+id/btnFavorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routescreen_tab_favorites" />

        <nz.ac.auckland.nihi.trainer.views.FontableButton
            android:id="@+id/btnNearby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routescreen_tab_nearby" />

        <nz.ac.auckland.nihi.trainer.views.FontableButton
            android:id="@+id/btnSortByLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/routescreen_tab_sortbylength" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100" >

    </LinearLayout>

    <ExpandableListView
        android:id="@+id/lstRoutes"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ExpandableListView>

</LinearLayout>