<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <nz.ac.auckland.nihi.trainer.views.FontableTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goalscreen_label_goaltype"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/cboGoalType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <nz.ac.auckland.nihi.trainer.views.FontableTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/goalscreen_label_weeklytarget"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtWeeklyTarget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <nz.ac.auckland.nihi.trainer.views.FontableButton
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />

        <View
            style="@style/DividerStyle"
            android:layout_width="@dimen/nihi_thin_divider_size"
            android:layout_height="match_parent" />

        <nz.ac.auckland.nihi.trainer.views.FontableButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>